--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="#about">Teams</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
@@ -53,9 +53,10 @@
     <header class="masthead">
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
-          <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-          <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
+          <h1 class="mx-auto my-0 text-uppercase">Overwatch League Rankings</h1>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, ranking site created by Mateo Carlson</h2>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5">Support Me: twitch.tv/Matillion_Gaming</h2>
+          <a href="#about" class="btn btn-primary js-scroll-trigger">Search for a Team</a>
         </div>
       </div>
     </header>
@@ -65,10 +66,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-            <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-          </div>
+            <h2 class="text-white mb-4">Overwatch League Teams:</h2>
+            <p class="text-white-50">You can go to the Overwathc league's site here:
+              <a href="https://overwatchleague.com/en-us/">on the official page</a>. The Overwatch League aims to follow the model of traditional North American professional sports, using a set of permanent, city-based teams and regular season play, rather than the use of promotion and relegation used commonly in other esports leagues.
         </div>
         <img src="../static/img/ipad.png" class="img-fluid" alt="">
       </div>
@@ -85,8 +85,8 @@
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
-              <h4>Shoreline</h4>
-              <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+              <h4>Sample Text</h4>
+              <p class="text-black-50 mb-0">Sample Text...</p>
             </div>
           </div>
         </div>
@@ -101,7 +101,7 @@
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-left">
                   <h4 class="text-white">Misty</h4>
-                  <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                  <p class="mb-0 text-white-50">OOOHH cool hills man</p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
                 </div>
               </div>
@@ -119,7 +119,7 @@
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-right">
                   <h4 class="text-white">Mountains</h4>
-                  <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                  <p class="mb-0 text-white-50">Barely see them</p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
                 </div>
               </div>
@@ -141,7 +141,7 @@
 
             <form class="form-inline d-flex">
               <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
-              <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
+              <button type="submit" class="btn btn-primary mx-auto">Notify Me!</button>
             </form>
 
           </div>
@@ -159,9 +159,9 @@
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Address</h4>
+                <h4 class="text-uppercase m-0">Where can you find me?</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                <div class="small text-black-50">twitch.tv/Matillion_Gaming</div>
               </div>
             </div>
           </div>
@@ -173,7 +173,7 @@
                 <h4 class="text-uppercase m-0">Email</h4>
                 <hr class="my-4">
                 <div class="small text-black-50">
-                  <a href="#">hello@yourdomain.com</a>
+                  <a href="#">mateo.carlson1016@gmail.com</a>
                 </div>
               </div>
             </div>
@@ -185,7 +185,7 @@
                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Phone</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">+1 (555) 902-8832</div>
+                <div class="small text-black-50">+1 (512) 919-8676</div>
               </div>
             </div>
           </div>
@@ -209,7 +209,7 @@
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        Copyright &copy; Your Website 2018
+        Copyright &copy; mateocarlson.pythonanywhere.com 2018
       </div>
     </footer>
 
