--- a/templates/index.html
+++ b/templates/index.html
@@ -11,15 +11,15 @@
     <title>Overwatch League Rankings</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="../static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link href="../static/vendor/fontawesome-free/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../static/css/grayscale.min.css" rel="stylesheet">
+    <link href="../static/css/grayscale.css" rel="stylesheet">
 
   </head>
 
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Overwatch League Rankings</a>
+        <a class="text-black-50 navbar-brand js-scroll-trigger" href="#page-top">Overwatch League Rankings</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -36,13 +36,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">Teams</a>
+              <a class="text-black-50 nav-link js-scroll-trigger" href="#about">Teams</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+              <a class="text-black-50 nav-link js-scroll-trigger" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
+              <a class="text-black-50 nav-link js-scroll-trigger" href="#signup">Contact</a>
             </li>
           </ul>
         </div>
@@ -53,9 +53,9 @@
     <header class="masthead">
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
-          <h1 class="mx-auto my-0 text-uppercase">Overwatch League Rankings</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, ranking site created by Mateo Carlson</h2>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">Support Me: twitch.tv/Matillion_Gaming</h2>
+          <h1 class="text-black-50 mx-auto my-0 text-uppercase">Overwatch League Rankings</h1>
+          <h2 class="text-black-50 mx-auto mt-2 mb-5">A free, responsive, ranking site created by Mateo Carlson</h2>
+          <h2 class="text-black-50 mx-auto mt-2 mb-5">Support Me: twitch.tv/Matillion_Gaming</h2>
           <a href="#about" class="btn btn-primary js-scroll-trigger">Search for a Team</a>
         </div>
       </div>
@@ -65,12 +65,12 @@
     <section id="about" class="about-section text-center">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
+          <div class="col-lg-8 mx-med">
             <h2 class="text-white mb-4">Overwatch League Teams:</h2>
             <p class="text-white-50">You can go to the Overwathc league's site here:
               <a href="https://overwatchleague.com/en-us/">on the official page</a>. The Overwatch League aims to follow the model of traditional North American professional sports, using a set of permanent, city-based teams and regular season play, rather than the use of promotion and relegation used commonly in other esports leagues.
         </div>
-        <img src="../static/img/ipad.png" class="img-fluid" alt="">
+        <img src="../static/img/LeagueTeams.jpg" class="img-fluid" alt="Responsive image">
       </div>
     </section>
 
@@ -214,14 +214,14 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="../static/vendor/jquery/jquery.min.js"></script>
-    <script src="../static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../static/vendor/jquery/jquery.js"></script>
+    <script src="../static/vendor/bootstrap/js/bootstrap.bundle.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="../static/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="../static/vendor/jquery-easing/jquery.easing.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="../static/js/grayscale.min.js"></script>
+    <script src="../static/js/grayscale.js"></script>
 
   </body>
 
