--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
               <a class="text-black-50 nav-link js-scroll-trigger" href="#about">Teams</a>
             </li>
             <li class="nav-item">
-              <a class="text-black-50 nav-link js-scroll-trigger" href="#projects">Projects</a>
+              <a class="text-black-50 nav-link js-scroll-trigger" href="#projects">Top 3</a>
             </li>
             <li class="nav-item">
               <a class="text-black-50 nav-link js-scroll-trigger" href="#signup">Contact</a>
@@ -65,7 +65,7 @@
     <section id="about" class="about-section text-center">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-med">
+          <div class="col-lg mx-med">
             <h2 class="text-white mb-4">Overwatch League Teams:</h2>
             <p class="text-white-50">You can go to the Overwathc league's site here:
               <a href="https://overwatchleague.com/en-us/">on the official page</a>. The Overwatch League aims to follow the model of traditional North American professional sports, using a set of permanent, city-based teams and regular season play, rather than the use of promotion and relegation used commonly in other esports leagues.
@@ -81,12 +81,17 @@
         <!-- Featured Project Row -->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
-            <img class="img-fluid mb-3 mb-lg-0" src="../static/img/bg-masthead.jpg" alt="">
+            <img class="img-fluid mb-3 mb-lg-0" src="../static/img/LA_Gladiators.jpg" alt="">
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
-              <h4>Sample Text</h4>
-              <p class="text-black-50 mb-0">Sample Text...</p>
+              <h4>#1   Los Angeles Gladiators</h4>
+              <p class="text-black-50 mb-0">Damage:</p>
+              <p class="text-black-50 mb-0">Surefour, Hydration, Decay</p>
+              <p class="text-black-50 mb-0">Tank:</p>
+              <p class="text-black-50 mb-0">Bischu, Void, Roar, Panker</p>
+              <p class="text-black-50 mb-0">Support:</p>
+              <p class="text-black-50 mb-0">Biggoose, Shaz, Ripa</p>
             </div>
           </div>
         </div>
@@ -94,14 +99,19 @@
         <!-- Project One Row -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
-            <img class="img-fluid" src="../static/img/demo-image-01.jpg" alt="">
+            <img class="img-fluid" src="../static/img/LA_Valiant.png" alt="">
           </div>
           <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                  <h4 class="text-white">Misty</h4>
-                  <p class="mb-0 text-white-50">OOOHH cool hills man</p>
+                  <h4 class="text-white">#2   Los Angeles Valiant</h4>
+                    <p class="text-white-50 mb-0">Damage:</p>
+                    <p class="text-white-50 mb-0">Agilities, Kariv, Bunny, Ksf</p>
+                    <p class="text-white-50 mb-0">Tank:</p>
+                    <p class="text-white-50 mb-0">Fate, Space, Kuki</p>
+                    <p class="text-white-50 mb-0">Support:</p>
+                    <p class="text-white-50 mb-0">Custa, Izayaki</p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
                 </div>
               </div>
@@ -112,7 +122,7 @@
         <!-- Project Two Row -->
         <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
-            <img class="img-fluid" src="../static/img/demo-image-02.jpg" alt="">
+            <img class="img-fluid" src="../static/img/NY_Excelsior.png" alt="">
           </div>
           <div class="col-lg-6 order-lg-first">
             <div class="bg-black text-center h-100 project">
