Changed colors of icons and removed images

--- a/templates/index.html
+++ b/templates/index.html
@@ -128,8 +128,13 @@
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                  <h4 class="text-white">Mountains</h4>
-                  <p class="mb-0 text-white-50">Barely see them</p>
+                  <h4 class="text-white">#3 New York Excelsior</h4>
+                    <p class="text-white-50 mb-0">Damage:</p>
+                    <p class="text-white-50 mb-0">Saebyeolbe, Pine, Libero, Flow3r, Nenne</p>
+                    <p class="text-white-50 mb-0">Tank:</p>
+                    <p class="text-white-50 mb-0">Mano and Meko</p>
+                    <p class="text-white-50 mb-0">Support:</p>
+                    <p class="text-white-50 mb-0">Ark, Jjonak, Anamo</p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
                 </div>
               </div>
@@ -147,11 +152,14 @@
           <div class="col-md-10 col-lg-8 mx-auto text-center">
 
             <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-            <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
+            <h2 class="text-white mb-5">Give us feedback!</h2>
 
             <form class="form-inline d-flex">
-              <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
-              <button type="submit" class="btn btn-primary mx-auto">Notify Me!</button>
+              <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-10" id="inputEmail" placeholder="Enter email..." required>
+              <input type="fname" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-10" id="inputFirstName" placeholder="Enter first name..." required>
+              <input type="lname" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-10" id="inputLastName" placeholder="Enter last name..." required>
+              <input type="message" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputMessage" placeholder="Enter your feedback..." required>
+              <button type="submit" class="btn btn-primary mx-auto">Contact Me!</button>
             </form>
 
           </div>
