--- a/static/css/grayscale.css
+++ b/static/css/grayscale.css
@@ -145,11 +145,11 @@
 }
 
 .btn-primary {
-  background-color: #7f4282;
+  background-color: #ff8c1a;
 }
 
 .btn-primary:hover {
-  background-color: #4f837f;
+  background-color: #e67300;
 }
 
 .btn-primary:focus {
@@ -158,7 +158,7 @@
 }
 
 .btn-primary:active {
-  background-color: #467370 !important;
+  background-color: #cc6600 !important;
 }
 
 .about-section {
@@ -288,7 +288,7 @@ a:focus, a:hover {
 }
 
 .text-primary {
-  color: #64a19d !important;
+  color: #e67300 !important;
 }
 
 footer {
