Changed detail buttons, formatting, images, and text colors

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="text-black-50 navbar-brand js-scroll-trigger" href="#page-top">Overwatch League Rankings</a>
+        <a class="text-black navbar-brand js-scroll-trigger" href="#page-top">Overwatch League Rankings</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -36,13 +36,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="text-black-50 nav-link js-scroll-trigger" href="#about">Teams</a>
+              <a class="text-black nav-link js-scroll-trigger" href="#about">League Teams</a>
             </li>
             <li class="nav-item">
-              <a class="text-black-50 nav-link js-scroll-trigger" href="#projects">Top 3</a>
+              <a class="text-black nav-link js-scroll-trigger" href="#projects">Top 3</a>
             </li>
             <li class="nav-item">
-              <a class="text-black-50 nav-link js-scroll-trigger" href="#signup">Contact</a>
+              <a class="text-black nav-link js-scroll-trigger" href="#signup">Contact</a>
             </li>
           </ul>
         </div>
@@ -53,9 +53,9 @@
     <header class="masthead">
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
-          <h1 class="text-black-50 mx-auto my-0 text-uppercase">Overwatch League Rankings</h1>
-          <h2 class="text-black-50 mx-auto mt-2 mb-5">A free, responsive, ranking site created by Mateo Carlson</h2>
-          <h2 class="text-black-50 mx-auto mt-2 mb-5">Support Me: twitch.tv/Matillion_Gaming</h2>
+          <h1 class="text-white mx-auto my-0 text-uppercase">Overwatch League Rankings</h1>
+          <h2 class="text-white mx-auto mt-2 mb-5">A free ranking site created by Mateo Carlson</h2>
+          <h2 class="text-white mx-auto mt-2 mb-5">Support Me: twitch.tv/Matillion_Gaming</h2>
           <a href="#about" class="btn btn-primary js-scroll-trigger">Search for a Team</a>
         </div>
       </div>
@@ -67,8 +67,8 @@
         <div class="row">
           <div class="col-lg mx-med">
             <h2 class="text-white mb-4">Overwatch League Teams:</h2>
-            <p class="text-white-50">You can go to the Overwathc league's site here:
-              <a href="https://overwatchleague.com/en-us/">on the official page</a>. The Overwatch League aims to follow the model of traditional North American professional sports, using a set of permanent, city-based teams and regular season play, rather than the use of promotion and relegation used commonly in other esports leagues.
+            <p class="text-white">You can go to the Overwatch league's site here:
+              <a href="https://overwatchleague.com/en-us/" target="_new">the official page</a>. The Overwatch League is the major Esports organization sponsored and run by Blizzard themselves. The League currently hosts twenty teams from nineteen different cities.
         </div>
         <img src="../static/img/LeagueTeams.jpg" class="img-fluid" alt="Responsive image">
       </div>
@@ -80,64 +80,60 @@
 
         <!-- Featured Project Row -->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-          <div class="col-xl-8 col-lg-7">
-            <img class="img-fluid mb-3 mb-lg-0" src="../static/img/LA_Gladiators.jpg" alt="">
+          <div class="col-xl-7 col-lg-6">
+            <img class="img-fluid mb-3 mb-lg-0" src="../static/img/LAG.png" alt="">
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h4>#1   Los Angeles Gladiators</h4>
-              <p class="text-black-50 mb-0">Damage:</p>
-              <p class="text-black-50 mb-0">Surefour, Hydration, Decay</p>
-              <p class="text-black-50 mb-0">Tank:</p>
-              <p class="text-black-50 mb-0">Bischu, Void, Roar, Panker</p>
-              <p class="text-black-50 mb-0">Support:</p>
-              <p class="text-black-50 mb-0">Biggoose, Shaz, Ripa</p>
+              <p class="text-black mb-0">Damage:</p>
+              <p class="text-black mb-0">Surefour, Hydration, Decay</p>
+              <p class="text-black mb-0">Tank:</p>
+              <p class="text-black mb-0">Bischu, Void, Roar, Panker</p>
+              <p class="text-black mb-0">Support:</p>
+              <p class="text-black mb-0">Biggoose, Shaz, Ripa</p>
+              <br>
+              <a href = "https://overwatchleague.com/en-us/teams/4406" target="_new"><button id = "Gladiators-Btn" class = "btn btn-primary" onclick ="https://overwatchleague.com/en-us/" class="my-2 col-sm-4"> Team Details </button></a>
             </div>
           </div>
         </div>
 
-        <!-- Project One Row -->
-        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-          <div class="col-lg-6">
-            <img class="img-fluid" src="../static/img/LA_Valiant.png" alt="">
+        <!-- Featured Project Row -->
+        <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+          <div class="col-xl-7 col-lg-6">
+            <img class="img-fluid mb-3 mb-lg-0" src="../static/img/LA_Valiant.png" alt="">
           </div>
-          <div class="col-lg-6">
-            <div class="bg-black text-center h-100 project">
-              <div class="d-flex h-100">
-                <div class="project-text w-100 my-auto text-center text-lg-left">
-                  <h4 class="text-white">#2   Los Angeles Valiant</h4>
-                    <p class="text-white-50 mb-0">Damage:</p>
-                    <p class="text-white-50 mb-0">Agilities, Kariv, Bunny, Ksf</p>
-                    <p class="text-white-50 mb-0">Tank:</p>
-                    <p class="text-white-50 mb-0">Fate, Space, Kuki</p>
-                    <p class="text-white-50 mb-0">Support:</p>
-                    <p class="text-white-50 mb-0">Custa, Izayaki</p>
-                  <hr class="d-none d-lg-block mb-0 ml-0">
-                </div>
-              </div>
+          <div class="col-xl-4 col-lg-5">
+            <div class="featured-text text-center text-lg-left">
+              <h4>#2   Los Angeles Valiant</h4>
+              <p class="text-black mb-0">Damage:</p>
+              <p class="text-black mb-0">Agilities, Kariv, Bunny, Ksf</p>
+              <p class="text-black mb-0">Tank:</p>
+              <p class="text-black mb-0">Fate, Space, Kuki</p>
+              <p class="text-black mb-0">Support:</p>
+              <p class="text-black mb-0">Custa, Izayaki</p>
+              <br>
+              <a href = "https://overwatchleague.com/en-us/teams/4405" target="_new"><button id = "Valiant-Btn" class = "btn btn-primary" onclick ="getDataFromApi()" class="my-2 col-sm-4"> Team Details </button></a>
             </div>
           </div>
         </div>
 
-        <!-- Project Two Row -->
-        <div class="row justify-content-center no-gutters">
-          <div class="col-lg-6">
-            <img class="img-fluid" src="../static/img/NY_Excelsior.png" alt="">
+        <!-- Featured Project Row -->
+        <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+          <div class="col-xl-7 col-lg-6">
+            <img class="img-fluid mb-3 mb-lg-0" src="../static/img/NY_Excelsior.png" alt="">
           </div>
-          <div class="col-lg-6 order-lg-first">
-            <div class="bg-black text-center h-100 project">
-              <div class="d-flex h-100">
-                <div class="project-text w-100 my-auto text-center text-lg-right">
-                  <h4 class="text-white">#3 New York Excelsior</h4>
-                    <p class="text-white-50 mb-0">Damage:</p>
-                    <p class="text-white-50 mb-0">Saebyeolbe, Pine, Libero, Flow3r, Nenne</p>
-                    <p class="text-white-50 mb-0">Tank:</p>
-                    <p class="text-white-50 mb-0">Mano and Meko</p>
-                    <p class="text-white-50 mb-0">Support:</p>
-                    <p class="text-white-50 mb-0">Ark, Jjonak, Anamo</p>
-                  <hr class="d-none d-lg-block mb-0 mr-0">
-                </div>
-              </div>
+          <div class="col-xl-4 col-lg-5">
+            <div class="featured-text text-center text-lg-left">
+              <h4>#3 New York Excelsior</h4>
+              <p class="text-black mb-0">Damage:</p>
+              <p class="text-black mb-0">Saebyeolbe, Pine, Libero, Flow3r, Nenne</p>
+              <p class="text-black mb-0">Tank:</p>
+              <p class="text-black mb-0">Mano and Meko</p>
+              <p class="text-black mb-0">Support:</p>
+              <p class="text-black mb-0">Ark, Jjonak, Anamo</p>
+              <br>
+              <a href = "https://overwatchleague.com/en-us/teams/4403" target="_new"><button id = "Excelsior-Btn" class = "btn btn-primary" onclick ="getDataFromApi()" class="my-2 col-sm-4"> Team Details </button></a>
             </div>
           </div>
         </div>
@@ -152,12 +148,12 @@
           <div class="col-md-10 col-lg-8 mx-auto text-center">
 
             <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-            <h2 class="text-white mb-5">Give us feedback!</h2>
+            <h2 class="text-white mb-5">Give me feedback!</h2>
 
             <form class="form-inline d-flex">
               <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-10" id="inputEmail" placeholder="Enter email..." required>
-              <input type="fname" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-10" id="inputFirstName" placeholder="Enter first name..." required>
-              <input type="lname" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-10" id="inputLastName" placeholder="Enter last name..." required>
+              <input type="name" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-10" id="inputFirstName" placeholder="Enter name..." required>
+              <input type="phoneNumber" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-10" id="inputPhoneNumber" placeholder="Enter phone..." required>
               <input type="message" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputMessage" placeholder="Enter your feedback..." required>
               <button type="submit" class="btn btn-primary mx-auto">Contact Me!</button>
             </form>
@@ -179,7 +175,7 @@
                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Where can you find me?</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">twitch.tv/Matillion_Gaming</div>
+                <div class="small text-black">twitch.tv/Matillion_Gaming</div>
               </div>
             </div>
           </div>
@@ -190,7 +186,7 @@
                 <i class="fas fa-envelope text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Email</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">
+                <div class="small text-black">
                   <a href="#">mateo.carlson1016@gmail.com</a>
                 </div>
               </div>
@@ -203,20 +199,17 @@
                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Phone</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">+1 (512) 919-8676</div>
+                <div class="small text-black">+1 (512) 919-9676</div>
               </div>
             </div>
           </div>
         </div>
 
         <div class="social d-flex justify-content-center">
-          <a href="#" class="mx-2">
+          <a href="https://twitter.com/matillion1" class="mx-2">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#" class="mx-2">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="#" class="mx-2">
+          <a href="https://github.com/MateoCarlson" class="mx-2">
             <i class="fab fa-github"></i>
           </a>
         </div>
