added feedback code

--- a/static/css/grayscale.css
+++ b/static/css/grayscale.css
@@ -299,6 +299,10 @@ a:focus, a:hover {
     color: #FFFFFF !important;
 }
 
+p.marginTop100 {
+    margin-top: 5em;
+}
+
 footer {
   padding: 5rem 0;
 }
