--- a/templates/index.html
+++ b/templates/index.html
@@ -87,11 +87,11 @@
             <div class="featured-text text-center text-lg-left">
               <h4>#1   Los Angeles Gladiators</h4>
               <p class="text-black mb-0">Damage:</p>
-              <p class="text-black mb-0">Surefour, Hydration, Decay</p>
+              <p class="text-black mb-3">Surefour, Hydration, Decay</p>
               <p class="text-black mb-0">Tank:</p>
-              <p class="text-black mb-0">Bischu, Void, Roar, Panker</p>
+              <p class="text-black mb-3">Bischu, Void, Roar, Panker</p>
               <p class="text-black mb-0">Support:</p>
-              <p class="text-black mb-0">Biggoose, Shaz, Ripa</p>
+              <p class="text-black mb-3">Biggoose, Shaz, Ripa</p>
               <br>
               <a href = "https://overwatchleague.com/en-us/teams/4406" target="_new"><button id = "Gladiators-Btn" class = "btn btn-primary" onclick ="https://overwatchleague.com/en-us/" class="my-2 col-sm-4"> Team Details </button></a>
             </div>
@@ -107,11 +107,11 @@
             <div class="featured-text text-center text-lg-left">
               <h4>#2   Los Angeles Valiant</h4>
               <p class="text-black mb-0">Damage:</p>
-              <p class="text-black mb-0">Agilities, Kariv, Bunny, Ksf</p>
+              <p class="text-black mb-3">Agilities, Kariv, Bunny, Ksf</p>
               <p class="text-black mb-0">Tank:</p>
-              <p class="text-black mb-0">Fate, Space, Kuki</p>
+              <p class="text-black mb-3">Fate, Space, Kuki</p>
               <p class="text-black mb-0">Support:</p>
-              <p class="text-black mb-0">Custa, Izayaki</p>
+              <p class="text-black mb-3">Custa, Izayaki</p>
               <br>
               <a href = "https://overwatchleague.com/en-us/teams/4405" target="_new"><button id = "Valiant-Btn" class = "btn btn-primary" onclick ="getDataFromApi()" class="my-2 col-sm-4"> Team Details </button></a>
             </div>
@@ -127,16 +127,18 @@
             <div class="featured-text text-center text-lg-left">
               <h4>#3 New York Excelsior</h4>
               <p class="text-black mb-0">Damage:</p>
-              <p class="text-black mb-0">Saebyeolbe, Pine, Libero, Flow3r, Nenne</p>
+              <p class="text-black mb-3">Saebyeolbe, Pine, Libero, Flow3r, Nenne</p>
               <p class="text-black mb-0">Tank:</p>
-              <p class="text-black mb-0">Mano and Meko</p>
+              <p class="text-black mb-3">Mano and Meko</p>
               <p class="text-black mb-0">Support:</p>
-              <p class="text-black mb-0">Ark, Jjonak, Anamo</p>
+              <p class="text-black mb-3">Ark, Jjonak, Anamo</p>
               <br>
               <a href = "https://overwatchleague.com/en-us/teams/4403" target="_new"><button id = "Excelsior-Btn" class = "btn btn-primary" onclick ="getDataFromApi()" class="my-2 col-sm-4"> Team Details </button></a>
             </div>
           </div>
         </div>
+
+        <p class="text-black mb-0 mt-5" align="center">*These standings are from when the site was originally created after the overwatch league inaugural stage four matches, which lasted from May 16 - June 16</p>
 
       </div>
     </section>
